--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,30 +23,27 @@ jobs:
           
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
+      
         
-      - name: search
-        run: |
-         ls
-        
-#       - name: Build and push
-#         uses: docker/build-push-action@v2
-#         with:
-#           context: .
-#           file: dockerfile
-#           push: true
-#           tags: sunjia1/test1
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: dockerfile
+          push: true
+          tags: sunjia1/test1
           
-#       - name: Exexute command
-#         uses: appleboy/ssh-action@master
-#         with:
-#           host: 49.234.22.25
-#           username: ubuntu
-#           key: ${{ secrets.SSHKEY }}
-#           port: 22
-#           script: |
-#             sudo docker images
-#             sudo docker stop test
-#             sudo docker pull sunjia1/test1
-#             sudo docker run -dp 3000:3000 --name test sunjia1/test1
-#             sudo docker ps
+      - name: Exexute command
+        uses: appleboy/ssh-action@master
+        with:
+          host: 49.234.22.25
+          username: ubuntu
+          key: ${{ secrets.SSHKEY }}
+          port: 22
+          script: |
+            sudo docker images
+            sudo docker stop test
+            sudo docker pull sunjia1/test1
+            sudo docker run -dp 3000:3000 --name test sunjia1/test1
+            sudo docker ps
         
