--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,8 +42,8 @@ jobs:
           port: 22
           script: |
             sudo docker images
-            sudo docker stop test
+            sudo docker stop $(sudo docker ps -aq)
             sudo docker pull sunjia1/test1
-            sudo docker run -dp 3000:3000 --name test sunjia1/test1
+            sudo docker run -dp 3000:3000  sunjia1/test1
             sudo docker ps
         
