--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
           context: .
           file: dockerfile
           push: true
-          tags: sunjia1/test1
+          tags: sunjia1/test1:&{{ github.ref }}
           
       - name: Exexute command
         uses: appleboy/ssh-action@master
@@ -44,6 +44,6 @@ jobs:
             sudo docker images
             sudo docker stop $(sudo docker ps -aq)
             sudo docker pull sunjia1/test1
-            sudo docker run -dp 3000:3000  sunjia1/test1
+            sudo docker run -dp 3000:3000  sunjia1/test1:&{{ github.ref }}
             sudo docker ps
         
