--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,8 +4,10 @@ name: CI
 on:
   push:
     branches: [ master ]
+    tags: [v*]
   pull_request:
     branches: [ master ]
+   
 
   workflow_dispatch:
 
@@ -31,7 +33,7 @@ jobs:
           context: .
           file: dockerfile
           push: true
-          tags: sunjia1/test1:&{{ github.ref }}
+          tags: sunjia1/test1:&{{  steps.meta.outputs.tags }}
           
       - name: Exexute command
         uses: appleboy/ssh-action@master
@@ -44,6 +46,6 @@ jobs:
             sudo docker images
             sudo docker stop $(sudo docker ps -aq)
             sudo docker pull sunjia1/test1
-            sudo docker run -dp 3000:3000  sunjia1/test1:&{{ github.ref }}
+            sudo docker run -dp 3000:3000  sunjia1/test1:&{{ steps.meta.outputs.tags }}
             sudo docker ps
         
