--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,7 @@ jobs:
         uses: hmanzur/actions-set-secret@v2.0.0
         with:
           name: 'MINOR'
-          value: $((${{ secrets.MINOR }}+1))
+          value: ${{ secrets.MINOR }}+1
           repository: goc-Sunrujia1/docker_test
           token: ${{ secrets.REPO_ACCESS_TOKEN }}   
         
