--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,11 +49,15 @@ jobs:
             sudo docker run -dp 3000:3000  sunjia1/test1:${{ secrets.MINOR }}
             sudo docker ps
             
-      - name: Update Minor version
+      - name: Autoincrement a new patch version
+        run: |
+          echo "NEW_PATCH_VERSION=$((${{ env.PATCH_VERSION }}+1))" >> $GITHUB_ENV
+          
+      - name: Update patch version
         uses: hmanzur/actions-set-secret@v2.0.0
         with:
-          name: 'MINOR'
-          value: ${{ secrets.MINOR }}+1
+          name: 'PATCH_VERSION'
+          value: ${{ env.NEW_PATCH_VERSION }}
           repository: goc-Sunrujia1/docker_test
-          token: ${{ secrets.REPO_ACCESS_TOKEN }}   
+          token: ${{ secrets.REPO_ACCESS_TOKEN }}
         
