新特性[DHBD/E/assets]:增加蒙版 #2

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,10 +3,10 @@ name: CI
 
 on:
   push:
-    branches: [ master ]
+    branches: [ featre/login ]
     tags: [v*]
   pull_request:
-    branches: [ master ]
+    branches: [ featre/login ]
    
 
   workflow_dispatch:
